# src/main/kotlin/com/wutsi/checkout/manager/dto/CreateCashoutResponse.kt
@@ -1,0 +1,8 @@
+package com.wutsi.checkout.manager.dto
+
+import kotlin.String
+
+public data class CreateCashoutResponse(
+    public val transactionId: String = "",
+    public val status: String = ""
+)
