# src/main/kotlin/com/wutsi/checkout/manager/dto/SearchTransactionResponse.kt
@@ -1,0 +1,7 @@
+package com.wutsi.checkout.manager.dto
+
+import kotlin.collections.List
+
+public data class SearchTransactionResponse(
+    public val transactions: List<TransactionSummary> = emptyList()
+)
